--- a/client-tools/tag_knowledge_category.json
+++ b/client-tools/tag_knowledge_category.json
@@ -1,15 +1,21 @@
 {
+  "type": "client",
   "name": "tag_knowledge_category",
   "description": "Tag emotional focus areas detected during conversation for knowledge base personalization",
-  "wait_for_response": true,
-  "response_timeout_seconds": 1,
   "parameters": [
     {
-      "data_type": "array",
-      "identifier": "categories", 
+      "id": "categories",
+      "type": "array",
+      "description": "Array of detected emotional categories. Each must be exactly: stress_management, goal_achievement, relationships, self_worth, or emotional_regulation",
+      "dynamic_variable": "",
+      "constant_value": "",
       "required": true,
-      "value_type": "LLM Prompt",
-      "description": "Array of detected emotional categories. Each must be exactly: stress_management, goal_achievement, relationships, self_worth, or emotional_regulation"
+      "value_type": "llm_prompt"
     }
-  ]
+  ],
+  "expects_response": true,
+  "response_timeout_secs": 1,
+  "dynamic_variables": {
+    "dynamic_variable_placeholders": {}
+  }
 }
