Refactor JSON configurations for client tools: corrected formatting in complete_onboarding.json, updated structure and descriptions in set_primary_goals.json and set_ritual_preferences.json, added new set_ui_step.json for onboarding navigation, and refined tag_knowledge_category.json to include item descriptions.

--- a/client-tools/tag_knowledge_category.json
+++ b/client-tools/tag_knowledge_category.json
@@ -7,10 +7,12 @@
       "id": "categories",
       "type": "array",
       "description": "Array of detected emotional categories. Each must be exactly: stress_management, goal_achievement, relationships, self_worth, or emotional_regulation",
-      "dynamic_variable": "",
-      "constant_value": "",
       "required": true,
-      "value_type": "llm_prompt"
+      "items": {
+        "type": "string",
+        "description": "Valid categories are: 'stress_management', 'goal_achievement', 'relationships', 'self_worth', 'emotional_regulation'",
+        "constant_value": ""
+      }
     }
   ],
   "expects_response": true,
